--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Cooking for everyday!
 logo: site-logo.png
 search: true
-url: http://localhost:4000
+# url: http://localhost:4000
 
 # Jekyll configuration
 
