--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: Cooking for everyday!
 logo: site-logo.png
 search: true
 # url: http://localhost:4000
+# Site live URL
+url: http://weekendfamily.github.io
 
 # Jekyll configuration
 
