--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: site-logo.png
 search: true
 # url: http://localhost:4000
 # Site live URL
-url: http://weekendfamily.github.io
+url: http://weekendfamily.github.io/foodforthepeople
 
 # Jekyll configuration
 
