--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # Site navigation links
 
+- title: Recipes
+  url: /blog/
+
 - title: About
   url: /about/
 
 - title: Articles
   url: /articles/
 
-- title: Blog
-  url: /blog/
+# - title: Theme Setup
+#   url: /theme-setup/
 
-- title: Theme Setup
-  url: /theme-setup/
-
-- title: Made Mistakes
-  url: http://mademistakes.com
+# - title: Made Mistakes
+#   url: http://mademistakes.com
 
 - title: Search
   url: /search/
