add disqus alias to allow comments

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,12 @@
 # Authors
 
 billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
-  bio: "What do you want, jewels? I am a very extravagant man."
+  name: António Domingues
+  web: adomingues.github.io
+  email: amjdomingues@gmail.com
+  bio: "Biologist with a penchant for computers. Foodie."
   avatar: bio-photo-2.jpg
-  twitter: extravagantman
+  twitter: keyboardpippette
   google:
     plus: BillyRick
 
