another try at comments

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,6 @@ owner:
 # comments
 site:
   owner:
-    disqus-shortname: fridaymeetssunday
+    disqus-shortname: weekendfamily-github-io
 
 comments: true
