--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ owner:
   name: António Domingues
   avatar: bio-photo.jpg
   email: amjdomingues@gmail
-  disqus-shortname: fridaymeetssunday
+  disqus-shortname: weekendfamily-github-io
   twitter: #username
   facebook: #username
   github: adomingues
@@ -57,5 +57,4 @@ owner:
     ad-slot:
   bing-verify:
 
-# comments
-comments: true
+
