disqus username + comments allowed

--- a/_config.yml
+++ b/_config.yml
@@ -58,3 +58,6 @@ owner:
   bing-verify:
 
 
+# Your disqus shortname, entering this will enable commenting on posts
+disqus: fridaymeetssunday
+comments: true
