--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 # Authors
 
-billy_rick:
+antonio_domingues:
   name: António Domingues
   web: adomingues.github.io
   email: amjdomingues@gmail.com
@@ -8,13 +8,13 @@ billy_rick:
   avatar: bio-photo-2.jpg
   twitter: keyboardpippette
   google:
-    plus: BillyRick
+    plus: +AntónioMigueldeJesusDomingues
 
-cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
+the_linguist:
+  name: The Linguist
+  # email: cornelius@thewhip.com
+  bio: "Typo's worst nightmare"
   avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
-  google:
-    plus: CorneliusFiddlebone
+  # twitter: rhymeswithsackit
+  # google:
+  #   plus: CorneliusFiddlebone
