modified google analytics and twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ owner:
   avatar: bio-photo.jpg
   email: amjdomingues@gmail
   disqus-shortname: weekendfamily-github-io
-  twitter: #username
+  twitter: keyboardpipette
   facebook: #username
   github: adomingues
   stackexchange: #http://stackoverflow.com/users/123456/username
@@ -51,7 +51,7 @@ owner:
   weibo: #userid
   google:
     plus: +AntónioMigueldeJesusDomingues
-    analytics: UA-60277379-1
+    analytics: UA-85440383-1
     verify:
     ad-client:
     ad-slot:
